objects/WordList__c.object
<CustomObject>
    <fields>
        <fullName>Mining__c</fullName>
        <label>Mining</label>
        <referenceTo>Mining__c</referenceTo>
        <relationshipLabel>WordList</relationshipLabel>
        <relationshipName>WordLists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>ma_result</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>uniq_result</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pos__c</fullName>
        <label>pos</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reading__c</fullName>
        <label>reading</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>surface__c</fullName>
        <label>surface</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>WordList</label>
    <nameField>
        <displayFormat>WL-{YYYY}{MM}{DD}-{00000}</displayFormat>
        <label>WordListNo</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>